--- a/render.yaml
+++ b/render.yaml
@@ -6,4 +6,5 @@ services:
     plan: free
     autoDeploy: false
     buildCommand: pip install -r requirements.txt
+                  python -m spacy download en_core_web_sm
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
