--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,8 @@ services:
     runtime: python
     plan: free
     autoDeploy: false
-    buildCommand: pip install -r requirements.txt
-                  python -m spacy download en_core_web_sm
+    buildCommand: |
+      pip install -r requirements.txt
+      python -m spacy download en_core_web_sm
+      playwright install chromium
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
