--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ multidict==6.6.4
 numpy==2.3.3
 pandas==2.3.2
 parse==1.20.2
+playwright==1.55.0
 propcache==0.3.2
 pydantic==2.11.9
 pydantic_core==2.33.2
