--- a/requirements.txt
+++ b/requirements.txt
@@ -40,9 +40,9 @@ playwright==1.55.0
 propcache==0.3.2
 pydantic==2.11.9
 pydantic_core==2.33.2
-pyee==13.0.0
+pyee
 Pygments==2.19.2
-pyppeteer==2.0.0
+pyppeteer
 pyquery==2.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
