--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,5 @@ services:
     autoDeploy: false
     buildCommand: |
       pip install -r requirements.txt
-      python -m spacy download en_core_web_sm
       playwright install chromium
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT --no-reload
