--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,5 @@ services:
     runtime: python
     plan: free
     autoDeploy: false
-    buildCommand: |
-      pip install -r requirements.txt
-      playwright install chromium
+    buildCommand: pip install -r requirements.txt && playwright install chromium
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT --no-reload
