--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,42 @@
+# services:
+#   # A Docker web service
+#   - type: web
+#     name: fastapi-example
+#     runtime: python
+#     plan: free
+#     autoDeploy: false
+#     buildCommand: |
+#       pip install -r requirements.txt && playwright install chromium
+#     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT --no-reload
+
 services:
-  # A Docker web service
   - type: web
     name: fastapi-example
     runtime: python
     plan: free
     autoDeploy: false
-    buildCommand: pip install -r requirements.txt && playwright install chromium
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT --no-reload
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.13
+      - key: PLAYWRIGHT_BROWSERS_PATH
+        value: /opt/render/.cache/ms-playwright
+    preBuildCommand: |
+      apt-get update && apt-get install -y \
+        libnss3 \
+        libxss1 \
+        libasound2 \
+        libatk1.0-0 \
+        libatk-bridge2.0-0 \
+        libcups2 \
+        libxcomposite1 \
+        libxdamage1 \
+        libxrandr2 \
+        libgbm1 \
+        libpango-1.0-0 \
+        libcairo2 \
+        libx11-xcb1 \
+        libgtk-3-0
+    buildCommand: |
+      pip install --no-cache-dir -r requirements.txt
+      playwright install chromium --with-deps
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT --workers 1 --no-reload
